--- a/style.css
+++ b/style.css
@@ -285,26 +285,32 @@ button:hover {
 }
 .project-content .project1,
 .project-content .project2,
-.project-content .project3 {
+.project-content .project3,
+.project-content .project4 {
   text-align: center;
   font-size: 20px;
 }
 .project-content .project1 button,
 .project-content .project2 button,
-.project-content .project3 button {
+.project-content .project3 button,
+.project-content .project4 button {
   padding: 10px 20px;
   border-radius: 150px;
   margin-top: 20px;
 }
 .project-content .project1 img,
 .project-content .project2 img,
-.project-content .project3 img {
+.project-content .project3 img,
+.project-content .project4 img {
   width: 100%;
   height: 180px;
+  object-fit: cover;
+  object-position: center;
 }
 .project-content .project1 p,
 .project-content .project2 p,
-.project-content .project3 p {
+.project-content .project3 p,
+.project-content .project4 p {
   text-align: justify;
 }
 #contact {
@@ -439,6 +445,7 @@ textarea {
   }
   .project-content {
     grid-template-columns: repeat(2, 1fr);
+    transition: 0.2s;
   }
 }
 @media (max-width: 1020px) {
@@ -496,6 +503,7 @@ textarea {
     transition: 0.2s;
     z-index: 999;
     cursor: pointer;
+    transition: 0.2s;
   }
   .mobile-menu {
     display: none;
@@ -515,19 +523,24 @@ textarea {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    transition: 0.2s;
   }
   .mobile-links:first-child {
     margin-top: 20px;
+    transition: 0.2s;
   }
   .mobile-links li {
     cursor: pointer;
     padding: 30px 0 0;
+    transition: 0.2s;
   }
   .mobile-links li a:hover {
     text-decoration: underline;
+    transition: 0.2s;
   }
   .navbar {
     display: none;
+    transition: 0.2s;
   }
   header button {
     padding: 10px 30px;
@@ -536,23 +549,26 @@ textarea {
   }
   .services {
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 30px;
+    gap: 30px;
     transition: 0.2s;
   }
   .project-content .project1 button,
   .project-content .project2 button,
-  .project-content .project3 button {
+  .project-content .project3 button,
+  .project-content .project4 button {
     padding: 7px 15px;
   }
   .project-content .project1,
   .project-content .project2,
-  .project-content .project3 {
+  .project-content .project3,
+  .project-content .project4 {
     text-align: center;
     transition: 0.2s;
   }
   .project-content .project1 img,
   .project-content .project2 img,
-  .project-content .project3 img {
+  .project-content .project3 img,
+  .project-content .project4 img {
     width: 100%;
     transition: 0.2s;
   }
@@ -568,20 +584,27 @@ textarea {
   }
 }
 @media (max-width: 700px) {
-  #projects {
-    margin: 250px 0 0;
-    transition: 0.2s;
-  }
   header {
     position: relative;
     padding: 20px 3%;
+    transition: 0.2s;
   }
   .main-btn button {
     font-size: 15px;
+    transition: 0.2s;
   }
   .email-btn button {
     padding: 5px 20px;
     font-size: 12px;
+    transition: 0.2s;
+  }
+  #projects {
+    padding: 0;
+    transition: 0.2s;
+  }
+  * {
+    /* text-wrap: wrap; */
+    overflow-x: hidden;
     transition: 0.2s;
   }
 }
@@ -593,49 +616,111 @@ textarea {
   .main-btn button {
     padding: 10px;
     font-size: 15px;
+    transition: 0.2s;
+  }
+  .footer-content {
+    margin: 0 40px;
+    transition: 0.2s;
+  }
+  .footer-bottom {
+    padding: 0;
+    transition: 0.2s;
   }
 }
 @media screen and (max-width: 500px) {
   #hero {
     padding: 0;
+    transition: 0.2s;
   }
   .abt-content {
     padding: 0;
     line-height: 1;
+    transition: 0.2s;
   }
   .abt-content p {
     margin-top: 20px;
-    font-size: 10px;
+    font-size: 15px;
+    transition: 0.2s;
   }
   .abt-content button {
     padding: 0;
     font-size: 0;
+    transition: 0.2s;
   }
   .services {
     margin: 40px;
+    transition: 0.2s;
   }
   .services .service1,
   .services .service2,
   .services .service3 {
     padding: 20px 30px;
+    transition: 0.2s;
   }
   .services .service1 p,
   .services .service2 p,
   .services .service3 p {
-    font-size: 10px;
+    font-size: 11px;
+    line-height: 1.3;
+    transition: 0.2s;
   }
   #projects {
     margin-top: 0;
+    transition: 0.2s;
   }
   .project-btn button {
     margin-left: 20px;
+    transition: 0.2s;
   }
   .project-content .project1 p,
   .project-content .project2 p,
   .project-content .project3 p {
     font-size: 15px;
+    transition: 0.2s;
   }
-  * {
-    overflow-x: hidden;
+  .footer-content {
+    margin: 0 10px;
+    transition: 0.2s;
+  }
+  .footer-bottom {
+    margin: 10px;
+    padding: 0 5px;
+    transition: 0.2s;
+  }
+  .email-btn button {
+    padding: 5px 10px;
+    transition: 0.2s;
+  }
+}
+@media screen and (max-width: 400px) {
+  .social-links li {
+    margin-left: 20px;
+    transition: 0.2s;
+  }
+  .project-content {
+    width: 90%;
+    transition: 0.2s;
+  }
+  .footer-content h3 {
+    font-size: 30px;
+    transition: 0.2s;
+  }
+  .services {
+    margin: 40px auto;
+    transition: 0.2s;
+  }
+  .services .service1,
+  .services .service2,
+  .services .service3 {
+    width: 100%;
+    transition: 0.2s;
+  }
+  .main-btn {
+    gap: 30px;
+    transition: 0.2s;
+  }
+  .main-btn button {
+    margin-top: 10px;
+    transition: 0.2s;
   }
 }
