--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ button:hover {
   font-size: 18px;
 }
 #about {
-  width: 50%;
+  width: 100%;
+  padding: 0 20px;
   margin: 0 auto;
 }
 .abt-content {
@@ -607,6 +608,9 @@ textarea {
     overflow-x: hidden;
     transition: 0.2s;
   }
+  .skill-content {
+    padding: 0 5px;
+  }
 }
 @media only screen and (max-width: 600px) {
   .hero-content {
@@ -629,7 +633,7 @@ textarea {
 }
 @media screen and (max-width: 500px) {
   #hero {
-    padding: 0;
+    padding: 0px;
     transition: 0.2s;
   }
   .abt-content {
@@ -667,6 +671,12 @@ textarea {
   #projects {
     margin-top: 0;
     transition: 0.2s;
+  }
+  .project-content {
+    width: 100%;
+    gap: 30px;
+    margin: 50px 0 0;
+    padding: 10px;
   }
   .project-btn button {
     margin-left: 20px;
@@ -723,5 +733,33 @@ textarea {
   .main-btn button {
     margin-top: 10px;
     transition: 0.2s;
+  }
+  #hero {
+    padding: 20px;
+  }
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    gap: 0;
+  }
+  .home-img {
+    width: 100%;
+  }
+  .home-img img {
+    height: auto;
+    margin: 0;
+  }
+  .footer-bottom {
+    margin: 5px;
+  }
+  .social-links li {
+    margin-left: 10px;
+  }
+  .footer-content h3 {
+    font-size: 20px;
+  }
+  .email-btn button {
+    padding: 5px;
   }
 }
